RESOLVED FIXED125132
XML fragment parsing algorithm doesn't use the context element's default namespace URI
https://bugs.webkit.org/show_bug.cgi?id=125132
Summary XML fragment parsing algorithm doesn't use the context element's default name...
Ryosuke Niwa
Reported 2013-12-02 22:02:02 PST
Right now, WebKit doesn't use the context element's namespace as the default namespace in the XHTML fragment parsing algorithm when xmlns is not set as specified in http://www.whatwg.org/specs/web-apps/current-work/multipage/the-xhtml-syntax.html#parsing-xhtml-fragments
Attachments
Patch (5.68 KB, patch)
2013-12-02 22:09 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-12-02 22:09:42 PST
WebKit Commit Bot
Comment 2 2013-12-03 11:42:07 PST
Comment on attachment 218265 [details] Patch Clearing flags on attachment: 218265 Committed r160024: <http://trac.webkit.org/changeset/160024>
WebKit Commit Bot
Comment 3 2013-12-03 11:42:09 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 4 2013-12-04 00:04:34 PST
Note You need to log in before you can comment on or make changes to this bug.